automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,14 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    "
+    "    return {term[0]*term[1], term[1]-1}"
    ]
   },
   {
