--- a/index.ipynb
+++ b/index.ipynb
@@ -38,19 +38,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    return {term[0]*term[1], term[1]-1}"
+    "    return (term[0]*term[1], term[1]-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_term_derivative(one_x_cubed) # (3, 2)\n",
     "two_x_squared = (2, 2)\n",
