--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,8 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    pass"
+    "    new_terms =[]\n",
+    "    new_terms"
    ]
   },
   {
