--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,10 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    new_terms =[]\n",
-    "    new_terms"
+    "    \n",
+    "    for t in function_terms:\n",
+    "        if t[1]\n",
+    "        new_terms.append(find_term_derivative(t))"
    ]
   },
   {
