automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,25 +77,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    new_terms =[]\n",
     "    \n",
     "    for t in function_terms:\n",
-    "        if t[1]\n",
-    "        new_terms.append(find_term_derivative(t))"
+    "        if t[1]:\n",
+    "            new_terms.append(find_term_derivative(t))\n",
+    "    \n",
+    "    return new_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(12, 2), (-3, 0)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_terms = [(4, 3), (-3, 1)]\n",
     "find_derivative(first_terms)"
@@ -110,9 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 1)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "second_terms = [(3, 2), (-11, 0)]\n",
     "find_derivative(second_terms) # [(6, 1)]"
