automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,9 @@
    "outputs": [],
    "source": [
     "def derivative_at(terms, x):\n",
-    "    "
+    "    value = 0\n",
+    "    for t in terms:\n",
+    "        value = valu"
    ]
   },
   {
