automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "def derivative_at(terms, x):\n",
     "    value = 0\n",
     "    for t in terms:\n",
-    "        value = valu"
+    "        value = value + "
    ]
   },
   {
