--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "def derivative_at(terms, x):\n",
-    "    value = 0\n",
+    "    new_list = list(map(lambda: find_derivative, terms))\n",
     "    for t in terms:\n",
     "        value = value + "
    ]
