automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,8 +156,9 @@
    "outputs": [],
    "source": [
     "def derivative_at(terms, x):\n",
-    "    new_list = list(map(lambda: find_derivative, terms))\n",
-    "    for t in terms:\n",
+    "    new_list = find_derivative(terms)\n",
+    "    value = 0\n",
+    "    for t in new_list:\n",
     "        value = value + "
    ]
   },
