--- a/index.ipynb
+++ b/index.ipynb
@@ -149,24 +149,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_at(terms, x):\n",
     "    new_list = find_derivative(terms)\n",
     "    value = 0\n",
     "    for t in new_list:\n",
-    "        value = value + "
+    "        value = value + t[0] * x**t[1]\n",
+    "    return value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# second_terms = [(3, 2), (-11, 0)]\n",
     "find_derivative(second_terms) # [(6, 1)]\n",
