automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
     "    return {'x': x_values, 'y': y_values}\n",
     "\n",
     "def tangent_line(function_terms, x_value, line_length = 4):\n",
-    "    "
+    "    x_values"
    ]
   },
   {
