automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
     "    return {'x': x_values, 'y': y_values}\n",
     "\n",
     "def tangent_line(function_terms, x_value, line_length = 4):\n",
-    "    x_values"
+    "    x_values = {'x':[x_value - line_length, x_value, x_value + line_length]}\n",
+    "    y_values = {'y'}"
    ]
   },
   {
