--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
     "\n",
     "def tangent_line(function_terms, x_value, line_length = 4):\n",
     "    x_values = {'x':[x_value - line_length, x_value, x_value + line_length]}\n",
-    "    y_values = {'y'}"
+    "    y_initial = output_at(function_terms, x_value)\n",
+    "    y_values = {'y':[]}"
    ]
   },
   {
