automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,6 +222,8 @@
     "def tangent_line(function_terms, x_value, line_length = 4):\n",
     "    x_values = {'x':[x_value - line_length, x_value, x_value + line_length]}\n",
     "    y_initial = output_at(function_terms, x_value)\n",
+    "    y_low = y_initial - derivative_at(function_terms, x_value)\n",
+    "    y_high = y_initial + derivative_at()\n",
     "    y_values = {'y':[]}"
    ]
   },
