automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,9 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -220,11 +232,12 @@
     "    return {'x': x_values, 'y': y_values}\n",
     "\n",
     "def tangent_line(function_terms, x_value, line_length = 4):\n",
-    "    x_values = {'x':[x_value - line_length, x_value, x_value + line_length]}\n",
+    "    x_values = [x_value - line_length, x_value, x_value + line_length]\n",
     "    y_initial = output_at(function_terms, x_value)\n",
     "    y_low = y_initial - derivative_at(function_terms, x_value)\n",
-    "    y_high = y_initial + derivative_at()\n",
-    "    y_values = {'y':[]}"
+    "    y_high = y_initial + derivative_at(function_terms, x_value)\n",
+    "    y_values = {'y':[y_low, y_initial, y_high]}\n",
+    "    return {'x':x_values, 'y':y_values}"
    ]
   },
   {
