--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    "
+    "    y_values = list(map(lambda x: ))"
    ]
   },
   {
